<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/my_cart"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imgBackButton"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/left_icon" />
    </RelativeLayout>

    <include
        android:id="@+id/pbFullScreen"
        layout="@layout/progress_bar_fullscreen"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imgEmptyCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:contentDescription="@string/empty_cart"
        android:padding="40dp"
        android:src="@drawable/empty_cart"
        android:visibility="gone" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCartList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:background="@color/background" />

    <Button
        android:id="@+id/btnBuyNow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/round_corner_button"
        android:text="@string/buy_now"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>