<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/tvActionBarTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imgBackButton"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/left_icon" />

        <ImageView
            android:id="@+id/imgCartButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/cart_image"
            android:src="@drawable/round_shopping_cart_black_48" />


    </RelativeLayout>

    <include
        android:id="@+id/pbFullScreen"
        layout="@layout/progress_bar_fullscreen"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llMainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/product_image" />

            <TextView
                android:id="@id/tvProductTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvPriceTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/our_price"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvDiscountedPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvPriceTag"
                    android:layout_alignStart="@id/tvPriceTag"
                    android:gravity="bottom"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvMRP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/tvDiscountedPrice"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/tvDiscountedPrice"
                    android:background="@drawable/strike_through"
                    android:gravity="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvDiscountPercentage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignBottom="@id/tvDiscountedPrice"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@id/btnLikeButton"
                    android:background="@drawable/discount_percentage_background_48"
                    android:gravity="center"
                    android:textColor="@android:color/black" />


                <ImageButton
                    android:id="@+id/btnLikeButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/like_button_selector"
                    android:contentDescription="@string/like_button" />


            </RelativeLayout>

            <Button
                android:id="@+id/btnOutOfStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/disabled_round_corner_button"
                android:enabled="false"
                android:focusable="false"
                android:text="@string/out_of_stock"
                android:textColor="@android:color/white" />


            <LinearLayout
                android:id="@+id/llAddToCartLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.sew.customcounterlibrary.CustomCounter
                    android:id="@+id/counterValue"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:paddingEnd="40dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="0dp"
                    android:layout_weight="1"
                    app:numberTextSize="8sp" />

                <Button
                    android:id="@+id/btnAddToCart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner_button"
                    android:text="@string/add_to_cart"
                    android:textColor="@android:color/white" />

            </LinearLayout>


            <TextView
                android:id="@+id/tvProductDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:textSize="16sp" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>