<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardProductDetails"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="5dp"
    card:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="5dp">


        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:contentDescription="@string/product_image"
            android:scaleType="fitXY"
            android:src="@drawable/oneplussample"
            tools:ignore="NestedWeights" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="8"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvProductTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvPriceTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/our_price"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/tvDiscountedPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvPriceTag"
                    android:layout_alignStart="@id/tvPriceTag"
                    android:layout_marginTop="5dp"
                    android:gravity="bottom"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvMRP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/tvDiscountedPrice"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/tvDiscountedPrice"
                    android:background="@drawable/strike_through"
                    android:gravity="bottom"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/tvDiscountPercentage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignBottom="@id/tvDiscountedPrice"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/tvMRP"
                    android:gravity="bottom"
                    android:textColor="@color/discount_text_color"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btnLikeButton"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/like_button_selector"
                        android:contentDescription="@string/like_button" />

                </LinearLayout>


            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>